Closed Bug 106524 Opened 23 years ago Closed 23 years ago

optgroup does not appear disabled when it is

Categories

(Core :: Layout: Form Controls, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: james, Assigned: john)

References

Details

(Keywords: polish)

Attachments

(3 files)

HTML 4.01 standard clearly has the ability to disable an option group. http://www.w3.org/TR/html4/interact/forms.html#edef-OPTGROUP Yet items in the option group are sold black. Disabling a single item turn that item gray. Furthermore, the first item in the select appears selected even though it is disable via optgroup AND option
The disabling should be a simple change to forms.css. The fact that it's selected is more serious. jkeiser? :) What does this look like on the branch? Is it just a dup of bug 92466? If so, we should make this bug about the visual appearance only...
OS: Windows 2000 → All
Hardware: PC → All
It *is* a simple fix to the CSS file, but I think we should hold off on making optgroups *appear* disabled until they actually *can* be disabled :) It is, however, in the bug 34297 patch. I think it's probably a dup of another bug (optgroups cannot be disabled) but I'll let you be the judge. I don't have time to find that bug right now and will be offline for the next few days, so if you or someone else could do so that'd be right pleasant :) I think it's one of the blocked bugs in 34297.
Ok. Thanks. Just give me a heads-up once optgroups can be disabled and then I'll make them look so. :)
Assignee: rods → bzbarsky
Status: UNCONFIRMED → NEW
Ever confirmed: true
This bug is similar to bug 92466 but not exactly the the same. 92466 concerns a select with a size and multiple where as this is a more standard <select> More importantly on this one an item appears selected by default is one that cannot be selected. Perhaps this is a "depends on" though?
To clarify. The bug about disabled things being selectable is bug 34297 (because the patch there fixes that problem). This bug is being focused on exactly what the summary says: the visual presentation. Adding dependency.
Depends on: 34297
Keywords: polish
Summary: optgroup do not appear disabled → optgroup does not appear disabled when it is
Someone with a non-Linux build verify please? Should be fixed.
Ok... With current solaris build I see the options disabled correctly ("two" is selected by default) and the colors are right (the whole disabled optgroup is in gray). Marking fixed by jkeiser's landing.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
i still see the bug on win2k buildID: 2001-11-19-06trunk & 2001-11-20-03-0.9.6 linux 7.1 buildID: 2001-11-20-08trunk option "one.one" under the disabled optgroup "this stuff" is selected by default when the testcase is loaded. This should not be the case since the optgroup has been set to be disabled. reopening bug
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Hrm.... yep. Fails for me on Linux. Even fails in the same build that worked on Solaris. Over to jkeiser.
Assignee: bzbarsky → jkeiser
Status: REOPENED → NEW
Attached patch FixSplinter Review
The problem actually *does* turn out to be simple. Specifically, it is not calling the IsOptionDisabled() method which goes through and checks optgroups.
Status: NEW → ASSIGNED
Attachment #58663 - Flags: superreview+
Comment on attachment 58663 [details] [diff] [review] Fix r=bzbarsky
Attachment #58663 - Flags: review+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
verified fixed on win2k buildID: 2001-12-20-09trunk redhat linux 7.1 buildID: 2001-12-20-08trunk macOS 9.1 buildID: 2001-12-20-06trunk
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: