Make disabled optgroups not be initially selected (bug 106524, r=bzbarsky@mit.edu, sr=jst@netscape.com)